almost done except json

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,10 +29,12 @@ dist.jar=${dist.dir}/CPD4414-Assign2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.javaJson.jar=F:\\JavaProject\\javaJson.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.javaJson.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
