--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/CPD4414-Assign2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.javaJson.jar=F:\\JavaProject\\javaJson.jar
+file.reference.javaJson.jar=lib/javaJson.jar
 includes=**
 jar.compress=false
 javac.classpath=\
