--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,12 +29,12 @@ dist.jar=${dist.dir}/CPD4414-Assign2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.javaJson.jar=lib/javaJson.jar
+file.reference.org.json-20120521.jar=lib/org.json-20120521.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.javaJson.jar}
+    ${file.reference.org.json-20120521.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
